--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ]
           }
         },
